--- a/Projects/ProjectARVR/ProjectARVR.csproj
+++ b/Projects/ProjectARVR/ProjectARVR.csproj
@@ -6,8 +6,13 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.2.7</VersionPrefix>
+		<VersionPrefix>1.0.2.8</VersionPrefix>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="CHANGELOG.md" />
+	  <None Remove="README.md" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
@@ -28,12 +33,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="CHANGELOG.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="README.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Update="manifest.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
-	
+
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制文件到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)manifest.json&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)manifest.json&quot; &quot;%25ReleasePluginsDir%25&quot;" />
+		<Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制主DLL到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;&#xD;&#xA;:: 复制manifest.json&#xD;&#xA;if exist &quot;$(OutDir)manifest.json&quot; (&#xD;&#xA;    copy &quot;$(OutDir)manifest.json&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)manifest.json&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;:: 复制ReadMe.md&#xD;&#xA;if exist &quot;$(OutDir)ReadMe.md&quot; (&#xD;&#xA;    copy &quot;$(OutDir)ReadMe.md&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)ReadMe.md&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;:: 复制Changelog.md&#xD;&#xA;if exist &quot;$(OutDir)Changelog.md&quot; (&#xD;&#xA;    copy &quot;$(OutDir)Changelog.md&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)Changelog.md&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)" />
 	</Target>
 </Project>
