--- a/Projects/ProjectKB/ProjectKB.csproj
+++ b/Projects/ProjectKB/ProjectKB.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Assets\ProjectKB.ico</ApplicationIcon>
-    <VersionPrefix>1.0.9.3</VersionPrefix>
+    <VersionPrefix>1.0.9.4</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -77,8 +77,8 @@
     </None>
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-	  <Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制文件到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)manifest.json&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)manifest.json&quot; &quot;%25ReleasePluginsDir%25&quot;" />
-  </Target>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制主DLL到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;&#xD;&#xA;:: 复制manifest.json&#xD;&#xA;if exist &quot;$(OutDir)manifest.json&quot; (&#xD;&#xA;    copy &quot;$(OutDir)manifest.json&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)manifest.json&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;:: 复制ReadMe.md&#xD;&#xA;if exist &quot;$(OutDir)ReadMe.md&quot; (&#xD;&#xA;    copy &quot;$(OutDir)ReadMe.md&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)ReadMe.md&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;:: 复制Changelog.md&#xD;&#xA;if exist &quot;$(OutDir)Changelog.md&quot; (&#xD;&#xA;    copy &quot;$(OutDir)Changelog.md&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;    copy &quot;$(OutDir)Changelog.md&quot; &quot;%25ReleasePluginsDir%25&quot;&#xD;&#xA;)" />
+	</Target>
 
 </Project>
