--- a/UI/ColorVision.UI.SocketProtocol/ColorVision.UI.SocketProtocol.csproj
+++ b/UI/ColorVision.UI.SocketProtocol/ColorVision.UI.SocketProtocol.csproj
@@ -11,9 +11,12 @@
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 	</PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="log4net" Version="3.1.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
+	</ItemGroup>
 
 </Project>
