--- a/UI/ColorVision.UI/ColorVision.UI.csproj
+++ b/UI/ColorVision.UI/ColorVision.UI.csproj
@@ -31,6 +31,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
 		<ProjectReference Include="..\ColorVision.Themes\ColorVision.Themes.csproj" />
+		<ProjectReference Include="..\ColorVision.UI.SocketProtocol\ColorVision.UI.SocketProtocol.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
