--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Panuon.WPF.UI" Version="1.3.0.2" />
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
 		<PackageReference Include="itext" Version="9.2.0" />
