--- a/UI/ColorVision.SocketProtocol/ColorVision.SocketProtocol.csproj
+++ b/UI/ColorVision.SocketProtocol/ColorVision.SocketProtocol.csproj
@@ -8,6 +8,7 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile></PackageReadmeFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<VersionPrefix>1.3.2.2</VersionPrefix>
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 	</PropertyGroup>
