--- a/UI/ColorVision.Themes/ColorVision.Themes.csproj
+++ b/UI/ColorVision.Themes/ColorVision.Themes.csproj
@@ -7,6 +7,7 @@
 		<ImplicitUsings>disable</ImplicitUsings>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<VersionPrefix>1.3.2.2</VersionPrefix>
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
