--- a/Projects/ProjectARVRLite/manifest.json
+++ b/Projects/ProjectARVRLite/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
-  "Id": "ProjectARVR",
-  "name": "ProjectARVR",
+  "Id": "ProjectARVRLite",
+  "name": "ProjectARVRLite",
   "version": "1.0",
   "description": "",
-  "dllpath": "ProjectARVR.dll",
+  "dllpath": "ProjectARVRLite.dll",
   "requires": "1.3.1.1"
 } 
