--- a/Projects/ProjectARVRLite/ProjectARVRLite.csproj
+++ b/Projects/ProjectARVRLite/ProjectARVRLite.csproj
@@ -44,6 +44,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="EditRecipeWindow.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
