--- a/Projects/ProjectKB/ProjectKB.csproj
+++ b/Projects/ProjectKB/ProjectKB.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Assets\ProjectKB.ico</ApplicationIcon>
-	  <VersionPrefix>1.2.1.1</VersionPrefix>
+	  <VersionPrefix>1.2.1.3</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -72,6 +72,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="FunTestDll.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="FunTestDllConfig.INI">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
